--- a/assets/scss/_blocks.scss
+++ b/assets/scss/_blocks.scss
@@ -1,7 +1,6 @@
 // All Blocks
 .seeds-paragraph-block {
   position: relative;
-  overflow: hidden;
 
   > .block-content {
     padding: 30px 0;
